# panopticon

./: .env.example  .gitignore  ARCHITECTURE.md  ETHICS.md  LICENSE  PRIVACY.md  PROJECT_PRINCIPLES.md  README.md  SETUP.md
.github/workflows/: build-apk.yml
analyses/: README.md
android/: README.md  pubspec.yaml
android/android/app/: build.gradle.kts
android/assets/instruments/: iri.json  phq9.json
android/ios/Runner.xcodeproj/: project.pbxproj
android/lib/: main.dart
android/linux/: CMakeLists.txt
android/test/: import_service_test.dart  instrument_scoring_test.dart  journal_pipeline_test.dart  widget_test.dart
android/tool/: sync_assets.dart
android/windows/: CMakeLists.txt
desktop-collector/: README.md  pyproject.toml
desktop-collector/panopticon_collector/: __init__.py  __main__.py  cli.py  events.py  writer.py
desktop-collector/panopticon_collector/importers/: __init__.py  base.py  spotify.py  youtube.py
desktop-collector/tests/: test_spotify_importer.py  test_writer.py  test_youtube_importer.py
docs/: custom-measurements.md  daily-briefing.md  data-flow.md  data-sources.md  devices.example.json  insights-cookbook.md  journal-pipeline.md  retention-policy.md  screening-instruments.md  self-hosting.md  server-stack.md  shizuku-setup.md
instruments/: daily_scales.json  gad7.json  mfq30.json  who5.json
journal/: README.md
prompts/: trajectory_analysis.md  trauma_informed_base.md  values_audit.md  weekly_review.md
prompts/personas/: README.md
schema/: context.schema.json  events.schema.json  insights.schema.json
(+58 files in other folders)
