[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panopticon-collector"
version = "0.1.0"
description = "Local-first desktop data collector for Panopticon. Reads platform data exports (Google Takeout, Spotify, etc.) and emits NDJSON events conforming to schema/events.schema.json."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Panopticon contributors"}]
keywords = ["self-instrumentation", "behavioral-data", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# No runtime dependencies in v1 — Python stdlib only. Importers parse JSON, JSONL,
# and CSV from official platform export bundles.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
panopticon-collector = "panopticon_collector.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["panopticon_collector*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
